<resources>
    <string name="app_name">StepTracker</string>
    <string name="steps_accumulated">Pasos Acumulados</string>
    <string name="zero">Cero</string>
    <string name="steps_unit">Pasos Unidad</string>
    <string name="distance_traveled">Distancia Recorrida</string>
    <string name="zero_decimal">Cero Decimal</string>
    <string name="personal_record">Record Personal</string>
    <string name="no_record">No Record</string>
    <string name="meters_unit">Metros Unidad</string>
    <string name="initializing">Iniciando</string>
</resources>